menu z-index fix

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -14,7 +14,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-  // display: none;
+  display: none;
 }
 
 /* header and navigation */
@@ -80,7 +80,7 @@ body {
 
 .menu {
   position: fixed;
-  z-index: 99;
+  z-index: 998;
   top: 0;
   bottom: 0;
   right: 0;
